fix no visible lines in invoice and salestransactions

--- a/MLPos.Web/wwwroot/css/adminStyles.css
+++ b/MLPos.Web/wwwroot/css/adminStyles.css
@@ -301,7 +301,6 @@ table, tr, th, td {
 }
 
 .tableContainer {
-    overflow: auto;
     margin-bottom: 2em;
 }
 
